# fasta-reader

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  far-config.cmake.in  install-deps
.github/workflows/: test.yml
src/: aux.c  aux.h  bug.c  bug.h  error.c  error.h  far.c  fsm.c  fsm.h  node.c  node.h  prof.c  prof.h  state.h  tgt.c  tgt.h  tok.c  tok.h
src/far/: aux.h  error.h  far.h  node.h  prof.h  rc.h  state.h  tgt.h  tok.h  trans.h
test/: CMakeLists.txt  read_fasta.c
test/assets/: mix.faa
